[gd_scene load_steps=3 format=3 uid="uid://dbx4exrv7dgsu"]

[ext_resource type="Script" uid="uid://dtai6w2b6t7sa" path="res://scenes/menus_settings/menu_settings.gd" id="1_fvi7q"]
[ext_resource type="Shortcut" uid="uid://b58bt5v88tsls" path="res://scenes/components/shortcuts/shortcut_cancel.tres" id="2_vxdsu"]

[node name="MenuSettings" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvi7q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ButtonDynamicBattleCamera" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dynamic Battle Camera (On)"

[node name="ButtonDebug" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Mode (On)"

[node name="ButtonClose" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = ExtResource("2_vxdsu")
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonDynamicBattleCamera" to="." method="_on_button_dynamic_battle_camera_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonDebug" to="." method="_on_button_debug_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
